Fixed bug (wrong height of container)

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -417,6 +417,10 @@ body {
     }
   }
 
+  .view{
+
+    height: 100%;
+  }
   .fullBox {
     background-color: #fff;
     -webkit-box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.1);
